--- a/services/web/templates/index.html
+++ b/services/web/templates/index.html
@@ -14,11 +14,10 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
+    <script src="/static/main.js"></script>
+    <link href="/static/main.css" rel="stylesheet" />
 
-    <script src="{{ url_for('static', filename='main.js') }}"></script>
-    <link href="{{ url_for('static', filename='main.css') }}" rel="stylesheet" />
-
-    <title>CKN netviz</title>
+    <title>SKM - CKN explorer</title>
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
@@ -28,7 +27,24 @@
 
     <div class="container-fluid">
         <div class="row">
-          <div class="col-3">
+          <ul class="nav navbar-nav" style="background: #00672c; color:floralwhite; width: 100%;">
+            <a class="nav-link" href="/" style="color:floralwhite;  margin-left: 10px;"> &larr; Home</a>
+          </ul>
+        </div>
+
+        <div class="row">
+          <div class="col-3 border-end border-light border-2">
+            <div class="card m-1">
+              <div class="card-body">
+              <h1 class="card-title"> CKN explorer </h1>
+              <p  class="card-text"> Use the search-box to find
+              entities in CKN and add them to the query box.
+              <br>
+              Clicking <em>extract subgraph</em> extracts the shortest paths between the
+              entities and displays the result as a graph to the right.
+              </p>
+              </div>
+            </div>
 
               <form id="searchform">
                 <div class="mb-3">
