--- a/services/web/templates/index.html
+++ b/services/web/templates/index.html
@@ -14,8 +14,8 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <script src="/static/main.js"></script>
-    <link href="/static/main.css" rel="stylesheet" />
+    <script src="{{ url_for('bp.static', filename='main.js') }}"></script>
+    <link href="{{ url_for('bp.static', filename='main.css') }}" rel="stylesheet" />
 
     <title>SKM - CKN explorer</title>
   </head>
